// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomUploads requestState should get the uploads 1`] = `
Array [
  Object {
    "type": "customUploads/SET",
    "value": "uploads",
  },
]
`;

exports[`CustomUploads should render CustomUploads component with uploaded files 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="settings-content without-footer"
      >
        <div
          class="panel panel-default"
        >
          <div
            class="panel-heading"
          >
            <span
              class="translation active"
            >
              Custom Uploads
            </span>
          </div>
          <div
            class="panel-body custom-uploads"
          >
            <div
              role="presentation"
              tabindex="0"
            >
              <div
                class="upload-box_wrapper"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-upload fa-w-16 "
                  data-icon="upload"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                    fill="currentColor"
                  />
                </svg>
                <input
                  multiple=""
                  style="display: none;"
                  tabindex="-1"
                  type="file"
                />
                <button
                  class="upload-box_link"
                  type="button"
                >
                  <span
                    class="translation active"
                  >
                    Browse files to upload
                  </span>
                </button>
                <span>
                   
                  <span
                    class="translation active"
                  >
                    or drop your files here.
                  </span>
                </span>
              </div>
            </div>
            <ul>
              <li>
                <div
                  class="thumbnail"
                />
                <div
                  class="info"
                >
                  <span
                    no-translate="true"
                  >
                    URL:
                  </span>
                  <span
                    class="thumbnail-url"
                  >
                    /assets/file1
                  </span>
                  <button
                    class=""
                    type="button"
                  >
                    <span
                      class="translation active"
                    >
                      Delete
                    </span>
                  </button>
                </div>
              </li>
              <li>
                <div
                  class="thumbnail"
                />
                <div
                  class="info"
                >
                  <span
                    no-translate="true"
                  >
                    URL:
                  </span>
                  <span
                    class="thumbnail-url"
                  >
                    /assets/file2
                  </span>
                  <button
                    class=""
                    type="button"
                  >
                    <span
                      class="translation active"
                    >
                      Delete
                    </span>
                  </button>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="settings-content without-footer"
    >
      <div
        class="panel panel-default"
      >
        <div
          class="panel-heading"
        >
          <span
            class="translation active"
          >
            Custom Uploads
          </span>
        </div>
        <div
          class="panel-body custom-uploads"
        >
          <div
            role="presentation"
            tabindex="0"
          >
            <div
              class="upload-box_wrapper"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-upload fa-w-16 "
                data-icon="upload"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <input
                multiple=""
                style="display: none;"
                tabindex="-1"
                type="file"
              />
              <button
                class="upload-box_link"
                type="button"
              >
                <span
                  class="translation active"
                >
                  Browse files to upload
                </span>
              </button>
              <span>
                 
                <span
                  class="translation active"
                >
                  or drop your files here.
                </span>
              </span>
            </div>
          </div>
          <ul>
            <li>
              <div
                class="thumbnail"
              />
              <div
                class="info"
              >
                <span
                  no-translate="true"
                >
                  URL:
                </span>
                <span
                  class="thumbnail-url"
                >
                  /assets/file1
                </span>
                <button
                  class=""
                  type="button"
                >
                  <span
                    class="translation active"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </li>
            <li>
              <div
                class="thumbnail"
              />
              <div
                class="info"
              >
                <span
                  no-translate="true"
                >
                  URL:
                </span>
                <span
                  class="thumbnail-url"
                >
                  /assets/file2
                </span>
                <button
                  class=""
                  type="button"
                >
                  <span
                    class="translation active"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CustomUploads when upload on progress should render on progress feedback 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="settings-content without-footer"
      >
        <div
          class="panel panel-default"
        >
          <div
            class="panel-heading"
          >
            <span
              class="translation active"
            >
              Custom Uploads
            </span>
          </div>
          <div
            class="panel-body custom-uploads"
          >
            <div
              role="presentation"
              tabindex="0"
            >
              <div
                class="upload-box_wrapper"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-upload fa-w-16 "
                  data-icon="upload"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                    fill="currentColor"
                  />
                </svg>
                <input
                  multiple=""
                  style="display: none;"
                  tabindex="-1"
                  type="file"
                />
                <button
                  class="upload-box_link"
                  type="button"
                >
                  <span
                    class="translation active"
                  >
                    Browse files to upload
                  </span>
                </button>
                <span>
                   
                  <span
                    class="translation active"
                  >
                    or drop your files here.
                  </span>
                </span>
              </div>
              <div
                class="uploading"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-spinner fa-w-16 fa-spin "
                  data-icon="spinner"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="translation active"
                >
                  Uploading ...
                </span>
              </div>
            </div>
            <ul />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="settings-content without-footer"
    >
      <div
        class="panel panel-default"
      >
        <div
          class="panel-heading"
        >
          <span
            class="translation active"
          >
            Custom Uploads
          </span>
        </div>
        <div
          class="panel-body custom-uploads"
        >
          <div
            role="presentation"
            tabindex="0"
          >
            <div
              class="upload-box_wrapper"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-upload fa-w-16 "
                data-icon="upload"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <input
                multiple=""
                style="display: none;"
                tabindex="-1"
                type="file"
              />
              <button
                class="upload-box_link"
                type="button"
              >
                <span
                  class="translation active"
                >
                  Browse files to upload
                </span>
              </button>
              <span>
                 
                <span
                  class="translation active"
                >
                  or drop your files here.
                </span>
              </span>
            </div>
            <div
              class="uploading"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-spinner fa-w-16 fa-spin "
                data-icon="spinner"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                  fill="currentColor"
                />
              </svg>
              <span
                class="translation active"
              >
                Uploading ...
              </span>
            </div>
          </div>
          <ul />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
